--- a/docs/gcode/gcode.asciidoc
+++ b/docs/gcode/gcode.asciidoc
@@ -1,3 +1,6 @@
+
+:imagesdir: gcode/images
+
 = G Codes
 
 [[cha:g-codes]] (((G Codes)))
@@ -361,7 +364,7 @@ G2 X1 Y1 I1 F10 (clockwise arc in the XY plane)
 
 .G2 Example[[fig:G2-Example]]
 
-image::images/g2.png[align="center"]
+image::g2.png[align="center"]
 
 In the next example we see the difference between the offsets for Y if
 we are doing a G2 or a G3 move. For the G2 move the start position is
@@ -379,7 +382,7 @@ G3 X0 Y0 I1 J-0.5 F25 (counterclockwise arc in the XY plane)
 
 .G2-G3 Example[[fig:G2-G3-Example]]
 
-image::images/g2-3.png[align="center"]
+image::g2-3.png[align="center"]
 
 .G2 Example Line
 [source,{ngc}]
@@ -541,7 +544,7 @@ M2
 
 .Sample NURBs Output
 
-image:images/nurbs01.png[align="center"]
+image:nurbs01.png[align="center"]
 
 More information on NURBs can be found here:
 
@@ -1405,7 +1408,7 @@ G76 P- Z- I- J- R- K- Q- H- E- L-
 
 .G76 Threading[[fig:G76-Threading]]
 
-image::images/g76-threads.png[align="center"]
+image::g76-threads.png[align="center"]
 
 
 * 'Drive Line' - A line through the initial X position parallel to the Z.
@@ -1521,7 +1524,7 @@ are the cutting moves.
 
 .G76 Example[[fig:G76-Threading-Example]]
 
-image::images/g76-01.png[align="center"]
+image::g76-01.png[align="center"]
 
 [[sec:G80-G89]]
 == Canned Cycles
@@ -1659,7 +1662,7 @@ The G98 to the second line above means that the return move will be to
 the value of Z in the first line since it is higher that the R value
 specified.
 
-image::images/eight.png[align="center"]
+image::eight.png[align="center"]
 
 
 .Twelve Holes in a Square
@@ -1683,7 +1686,7 @@ Z0
 M2 (program end)
 ----
 
-image::images/twelve.png[align="center"]
+image::twelve.png[align="center"]
 
 The second reason to use a canned cycle is that they all produce
 preliminary moves and returns that you can anticipate and control
@@ -1754,7 +1757,7 @@ being able to point a reader to a specific line of code.
 
 .G80 Cycle[[cap:G80-Cycle]]
     
-image::images/G81mult.png[align="center"]
+image::G81mult.png[align="center"]
 
 The use of G80 in line N200 is optional because the G0 on the next
 line will turn off the G81 cycle. But using the G80 as shown in 
@@ -1814,7 +1817,7 @@ The following moves take place:
 
 . a rapid move parallel to the Z-axis to (Z3)
 
-image::images/G81ex1.png[align="center"]
+image::G81ex1.png[align="center"]
 
 .Example 2 - Relative Position G81
 
@@ -1862,7 +1865,7 @@ The third repeat consists of 3 moves. The X position is reset to
 
 . a rapid move parallel to the Z-axis to (X13, Y17, Z4.8)
 
-image::images/G81ex2.png[align="center"]
+image::G81ex2.png[align="center"]
 
 .Example 3 - Relative Position G81
 
@@ -1878,7 +1881,7 @@ nothing for the motion but since the initial value of Z is less than
 the value specified in R, there will be an initial Z move during the
 preliminary moves.
 
-image::images/G81.png[align="center"]
+image::G81.png[align="center"]
 
 .Example 4 - Absolute G81 R > Z
 
@@ -1893,7 +1896,7 @@ initial Z0 and R1.8 and rapid moves to that location. After that initial Z
 move, the repeat feature works the same as it did in example 3 with the
 final Z depth being 0.6 below the R value.
 
-image::images/G81a.png[align="center"]
+image::G81a.png[align="center"]
 
 .Example 5 - Relative position R > Z
 
