--- a/docs/drivers/pico_ppmc.asciidoc
+++ b/docs/drivers/pico_ppmc.asciidoc
@@ -1,4 +1,6 @@
 
+:imagesdir: drivers/images
+
 = Pico Drivers
 
 [[cha:pico-drivers]] (((Pico PPMC Driver)))
@@ -199,7 +201,7 @@ can be specified.
    Applies to a group of four consecutive step generators, as indicated by
    '<channel-range>'. Values between 200 ns and 25.5 us can be specified.
    The maximum step rate is:
-   image:images/pico-ppmc-math.png[]    
+   image:pico-ppmc-math.png[]    
 * '(USC float) ppmc.<port>.stepgen.<channel>.scale' - Scaling for
    step pulse generator. The step frequency in Hz is the
    absolute value of 'velocity' * 'scale'.
